OAS and Black Fix

--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -607,9 +607,15 @@ paths:
                   device: "DEV-001"
                   ts: "2026-02-04T12:00:00Z"
                   metrics:
-                    temperature: 21.5
-                    door_open: false
-                    status: "ok"
+                    temperature: 
+                      value: 21.6
+                      unit: "celsius"
+                    door_open: 
+                      value: false
+                      unit: "closed"
+                    status: 
+                      value: "ok"
+                      unit: "Online"
               batch:
                 summary: Batch telemetry payload
                 value:
@@ -617,12 +623,16 @@ paths:
                     device: "DEV-001"
                     ts: "2026-02-04T12:00:00Z"
                     metrics:
-                      temperature: 21.5
+                      temperature: 
+                        value: 21.5
+                        unit: "celsius"
                   - schema_version: 1
                     device: "DEV-001"
                     ts: "2026-02-04T12:00:01Z"
                     metrics:
-                      temperature: 21.6
+                      temperature:
+                        value: 21.6
+                        unit: "celsius"
       responses:
         '201':
           description: Telemetry ingested
@@ -1462,17 +1472,15 @@ components:
           additionalProperties:
             $ref: "#/components/schemas/TelemetryMetricValue"
           example:
-            temperature: 
+            temperature:
               value: 21.5
               unit: "celsius"
-            door_open: 
-                value: false
-                unit: "closed"
-            metrics:
-              temperature: 21.6
-              status: 
-                value: "ok"
-                unit: "Online"
+            door_open:
+              value: false
+              unit: "closed"
+            status:
+              value: "ok"
+              unit: "online"
       required:
         - schema_version
         - device
@@ -1489,9 +1497,7 @@ components:
           door_open: 
               value: false
               unit: "closed"
-          metrics:
-            temperature: 21.6
-            status: 
+          status: 
               value: "ok"
               unit: "Online"
 
@@ -1514,7 +1520,9 @@ components:
           device: "DEV-001"
           ts: "2026-02-04T12:00:01Z"
           metrics:
-            temperature: 21.6
+            temperature:
+              value: 21.5
+              unit: "celsius"
             status: 
               value: "ok"
               unit: "Online"
