--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,9 +86,6 @@ jobs:
       DB_HOST: localhost
       DB_PORT: 5432
       SECRET_KEY: "dummy_secret_for_ci"
-      # Celery: use in-memory broker so no Redis is needed in CI.
-      # Without this, conf/__init__.py imports celery_app which configures
-      # the broker URL; any eager connection attempt would time-out/retry.
       CELERY_BROKER_URL: "memory://"
       CELERY_RESULT_BACKEND: "cache+memory://"
 
@@ -109,10 +106,7 @@ jobs:
 
     strategy:
       matrix:
-        # Single version: 3.10 compatibility is verified by ruff/black which
-        # target py310 already. Running two identical test jobs doubles
-        # billed minutes with no additional signal.
-        python-version: [ "3.11" ]
+        python-version: [ "3.10", "3.11" ]
     defaults: *backend_defaults
 
     steps:
@@ -130,10 +124,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
-          python -m pip install pytest-xdist
 
       - name: Pytest & Coverage
-        run: pytest -n auto --cov --cov-report=xml:coverage.xml --cov-report=term-missing --cov-fail-under=20
+        run: pytest --cov --cov-report=xml:coverage.xml --cov-report=term-missing
 
       - name: Upload coverage.xml
         uses: actions/upload-artifact@v4
