--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,10 +19,11 @@ DJANGO_SETTINGS_MODULE = "conf.settings"
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-# --cov intentionally excluded from addopts.
-# CI passes --cov explicitly (see .github/workflows/ci.yml).
-# Run locally with: pytest --cov --cov-report=term-missing --cov-fail-under=20
-addopts = []
+addopts = [
+    "--cov",
+    "--cov-report=term-missing",
+    "--cov-fail-under=20",
+]
 filterwarnings = [
     "ignore::DeprecationWarning:pythonjsonlogger.*",
 ]
