configured prometheus multiprocess metrics shared volume

--- a/.env.example
+++ b/.env.example
@@ -274,3 +274,10 @@ KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 KAFKA_TOPIC_TELEMETRY_RAW=telemetry.raw
 KAFKA_TOPIC_TELEMETRY_CLEAN=telemetry.clean
 KAFKA_TOPIC_TELEMETRY_DLQ=telemetry.dlq
+
+# ==============================
+# Prometheus multiprocess metrics
+# Shared directory for metrics across Django web + Celery worker processes
+# Set the same path in all services that expose or collect metrics
+# ==============================
+PROMETHEUS_MULTIPROC_DIR=/tmp/prometheus_multiproc
